fix: Add button small variant

--- a/assets/css/components/button.css
+++ b/assets/css/components/button.css
@@ -42,3 +42,8 @@
 .btn--icon {
   @apply inline-flex items-center;
 }
+
+.btn--small {
+  @apply py-1 px-2;
+  @apply text-sm;
+}
